--- a/src/PokeDeck.css
+++ b/src/PokeDeck.css
@@ -3,3 +3,10 @@
     justify-content: space-evenly;
     flex-wrap:wrap;
 }
+
+.PokeDeck-winner{
+    color:#4caf50;
+}
+.PokeDeck-looser{
+    color:#e91e63;
+}
